--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "react-homework-template",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://irailcha.github.io/goit-react-hw-06-phonebook/",
+  "homepage": "https://irailcha.github.io/goit-react-hw-07-phonebook/",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.6",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.5.1",
     "formik": "^2.4.3",
     "immer": "^10.0.3",
     "modern-normalize": "^2.0.0",
